tests/samples/0067/error.txt
error[P0011]: unexpected token `[`, expected an expression
  --> 0067/code.ara:2:10
  |
2 |     $a = [];
  |          ^

error: failed to parse "0067/code.ara" due to the above issue(s)
 = summary: 1 error(s)

